// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Platforms slice tests > should update state on fulfilled boosts list 1`] = `
{
  "activeIds": [],
  "allIds": [],
  "byId": {},
  "filterIds": [],
}
`;

exports[`Platforms slice tests > should update state on fulfilled vault list 1`] = `
{
  "activeIds": [
    "beefy",
    "sushi",
  ],
  "allIds": [],
  "byId": {},
  "filterIds": [],
}
`;
